keycloak_bak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS
spec:
  rules:
  - host: keycloak.com.git
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: 8443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - keycloak.com.git
    secretName: keycloak-tls
